--- a/Latefusion_keras concatenate.ipynb
+++ b/Latefusion_keras concatenate.ipynb
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![/nfsmount/majid/StressDetection/Hypothesis/Majid/Model.png](attachment:/nfsmount/majid/StressDetection/Hypothesis/Majid/Model.png)\n"
+    "![Model.png](Model.png)\n"
    ]
   },
   {
