--- a/Latefusion_keras concatenate.ipynb
+++ b/Latefusion_keras concatenate.ipynb
@@ -124,16 +124,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compile the model\n",
-    "late_fusion_model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#leave one out cross validation using user ids from H to R\n",
     "epochs = 10\n",
     "\n",
@@ -170,6 +160,8 @@
     "\n",
     "    y_train = tf.keras.utils.to_categorical(ytrain_bio, num_classes=3)\n",
     "    y_test = tf.keras.utils.to_categorical(ytest_bio, num_classes=3)\n",
+    # Compile the model\n",
+    "late_fusion_model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "    late_fusion_model.fit([Xtrain_bio, Xtrain_land], y_train, epochs=epochs, batch_size=8, verbose=1)\n"
    ]
   },
